# src/adapter/api/routes/PedidoRouter.ts
@@ -9,5 +9,6 @@ pedidoRouter.post("", pedidoController.criar);
 pedidoRouter.post("/item", pedidoController.adicionarItem);
 pedidoRouter.get("/:pedidoId", pedidoController.buscarPorId);
 pedidoRouter.put("/:pedidoId", pedidoController.atualizar);
+pedidoRouter.get("/:pedidoId/status-pagamento", pedidoController.buscarStatusPagamento)
 
 export { pedidoRouter };
